@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020161021"
-#define public MagickPackageReleaseDate "snapshot-20161021"
+#define public MagickPackageVersionAddendum ".020161029"
+#define public MagickPackageReleaseDate "snapshot-20161029"
